compiler/src/compile/snapshots/compiler__compile__loop_visitor__test__symtab_fail_snapshot_tests@break_outside_loop_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/loop_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/loop_visitor/break_outside_loop_fail.tapir
---
[E0016] Error: `break` or `continue` must be within a loop
   ╭─[ break_outside_loop_fail.tapir:2:1 ]
   │
 2 │ break;
   │ ───┬──  
   │    ╰──── This statement
───╯
