compiler/src/compile/snapshots/compiler__compile__loop_visitor__test__symtab_success_snapshot_tests@has_break_if_statement_success.tapir.snap
---
source: compiler/src/compile/loop_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/loop_visitor/has_break_if_statement_success.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Loop(
            block: [
              Statement(
                span: "[span]",
                kind: If(
                  condition: Expression(
                    span: "[span]",
                    kind: Bool(true),
                    meta: {},
                  ),
                  true_block: [
                    Statement(
                      span: "[span]",
                      kind: Break,
                      meta: {},
                    ),
                  ],
                  false_block: [],
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
