compiler/src/compile/snapshots/compiler__compile__loop_visitor__test__symtab_success_snapshot_tests@no_breaks_success.tapir.snap
---
source: compiler/src/compile/loop_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/loop_visitor/no_breaks_success.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "i",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(0),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Loop(
            block: [
              Statement(
                span: "[span]",
                kind: Assignment(
                  targets: [
                    Expression(
                      span: "[span]",
                      kind: Variable("i"),
                      meta: {},
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: BinaryOperation(
                        lhs: Expression(
                          span: "[span]",
                          kind: Variable("i"),
                          meta: {},
                        ),
                        operator: Add,
                        rhs: Expression(
                          span: "[span]",
                          kind: Integer(1),
                          meta: {},
                        ),
                      ),
                      meta: {},
                    ),
                  ],
                ),
                meta: {},
              ),
              Statement(
                span: "[span]",
                kind: Wait(
                  frames: None,
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "compiler::compile::loop_visitor::LoopContainsNoBreak": "LoopContainsNoBreak",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
